# FMI-SDP-Coursework

./: .gitignore  CMakeLists.txt  main.cpp
include/: ExpressionInterpreter.h  Spreadsheet.h
include/commands/: Command.h  CommandFactory.hpp  LoadCommand.h  NewCommand.h  PrintCommand.h  SaveCommand.h  SetCommand.h
include/operators/: AddressOperators.h  ArithmeticOperators.hpp  Brackets.hpp  Operator.h  OperatorSelector.hpp
include/utils/: CSVFileFunctions.h  ExpressionInterpreter.h  linked_stack.hpp
src/: CSVFileFunctions.cpp  ExpressionInterpreter.cpp  Spreadsheet.cpp  SpreadsheetIterator.cpp
src/commands/: Command.cpp  LoadCommand.cpp  NewCommand.cpp  PrintCommand.cpp  SaveCommand.cpp  SetCommand.cpp
src/operators/: AddressOperator.cpp
